Fix Changes UI problem where the top half of the "Newer" and "Older" buttons were unresponsive.
Summary:
The branch selection dropdown on some Changes UI tabs was contained in a
<div> that stretched the full width of the screen. This div could overlay other
UI elements and capture mouse events, causing the obscured elements to be
unresponsive.

Fix this problem by shrinking the <div> width to the minimum size possible (0%).

While we're in the area, also improve the vertical alignment of the
dropdown vs. the bar chart, for better visual appeal.

F383667
F383668
F383669

Final screenshot, with Dropbox CSS applied.
F384135

Test Plan: Manually tested locally.

Reviewers: kylec

Reviewed By: kylec

Subscribers: changesbot, guido

Projects: #changes_ui

Differential Revision: https://tails.corp.dropbox.com/D191645

--- a/webapp/css/page_specific.less
+++ b/webapp/css/page_specific.less
@@ -201,15 +201,16 @@
 /* project page */
 
 .commitsChart, .buildsChart {
-  padding-top: 20px;
+  padding-top: 2px;
   margin-bottom: 15px;
   border-left: 1px solid @fainterBorder;
   padding-left: 40px;
 }
 
 .commitsControls, .buildsControls {
-  position: relative;
-  top: 23px;
+  padding-top: 19px;
+  padding-bottom: 20px;
+  display: inline-block;
 }
 
 /* admin project page */
